welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:15: error: Unmatched closing brace '}' ignored here
	}
        ^nearHundred:17: error: expected class or object definition
def valAbs(n:Int):Int = {
^nearHundred:20: error: expected class or object definition
def valAbs1(n:Int):Int = {
^nearHundred:24: error: Unmatched closing brace '}' ignored here
 }
 ^