welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	
	if (valAbs(n:Int) <= 10 ){
		return true
	}else{
		return false
	}
} 
	
	if (valAbs1(n:Int) <= 10 ){
		return true
	}else{
		return false
	}
	}
}		
def valAbs(n:Int):Int = {
	Math.abs(n - 100) 
}
def valAbs1(n:Int):Int = {
	Math.abs(n - 200)
}
